log
Thu 25 Apr 2024 01:57:38 AM UTC: 
 hashmap.c | 78 +++++++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 54 insertions(+), 24 deletions(-)
 tests:  5|4
total_score: 30/70
295cb14
Thu 25 Apr 2024 02:09:33 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
819e5de
Thu 25 Apr 2024 02:12:07 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
dcbd7bb
Thu 25 Apr 2024 02:12:59 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
58b642f
Thu 25 Apr 2024 02:15:32 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:84:31: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   84 |   while (map->buckets != NULL && map->buckets[pos]->key == NULL ||
      |                               ^
cc1: all warnings being treated as errors
Compilation failed
137adaf
